  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/78

- Fix DeprecationWarning: Use of .. or absolute path in a resource path is not
  allowed and will raise exceptions in a future release.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/76

- Drop Python 3.4 support, and add Python 3.8 support.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/74

- Fix ``lang`` attribute syntax for Chameleon template.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/73

- Add ``logger_alembic`` to ``ini`` files.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/71

- Remove the settings for ``tm.manager_hook``.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/66

- Fix an issue where entered values in inputs inherit white as their text
  color, making it impossible to see entered values.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/64

- Drop Python 2 support.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/63

- Allow input values to display by setting the text color to black instead of
  inheriting the color of white.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/64


1.10 (2018-10-05)
-----------------

- pyramid-cookiecutter-starter combines all features of
  pyramid-cookiecutter-alchemy and pyramid-cookiecutter-zodb.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/61


0.3
---

- Use a context manager.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/issues/44

- Align template layout with alchemy cookiecutter.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/53

- Update Twitter Bootstrap external resources.
  See https://github.com/Pylons/pyramid-cookiecutter-starter/pull/48/


0.2
---

- Add plaster_pastedeploy to the dependencies in setup.py
  See: https://github.com/Pylons/pyramid/issues/3048


0.1
---

- Initial version.